[package]
name = "gtk_rs_playground"
version = "0.1.0"
authors = ["WenjunHuang <huangwj@goldlokedu.cn>"]

[dependencies]
libc="*"
glib = "*"
gdk = {version = "*",optional = true}
gdk-pixbuf = "*"
gtk = {version = "*",  features=["v3_22"]}
gio = "*"
pango = "*"
gstreamer="*"
gstreamer-audio = "*"
gstreamer-video = "*"
gstreamer-player = "*"
cairo-rs = { version = "*", features = ["png"] }
send-cell = "*"
byte-slice-cast = "*"
futures = "*"
mio="*"
#tokio="*"
tokio-core = "*"
tokio-io="*"
tokio-service="*"
bytes="*"
hyper="*"
rand="*"
rust-crypto="*"
serde="*"
serde_json="*"
serde_derive="*"
chrono="*"
percent-encoding = "1.0.1"

#[features]
#tutorial5 = ["gtk", "gdk"]
#tutorial5-x11 = ["tutorial5"]
#tutorial5-quartz = ["tutorial5"]
#tutorial5-win32 = ["tutorial5"]